# ClayEngineVKMobile

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/application/: DemoAppAndroid.cpp  DemoAppAndroid.h
app/src/main/cpp/application/scenes/menu_scene/: MenuScene.cpp  MenuScene.h
app/src/main/cpp/application/scenes/sandbox_scene/: SandboxScene.cpp  SandboxScene.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
patches/: physx_fixes.patch
res/: compile_shaders.bat
res/shaders/: Flat.frag.glsl  Flat.vert.glsl  Solid.frag.glsl  Solid.vert.glsl  Text.frag.glsl  Text.vert.glsl  Texture.frag.glsl  Texture.vert.glsl
